--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="jumbotron text-center" style="margin-bottom:0">
         <h1>انگیزه نامه</h1>
-        <p>مهناز محمدی</p>
+        <p>رضا آزادمهر</p>
     </div>
 
 
